src/snapshots/rv__dependency_edit__tests__add_git_with_directory.snap
---
source: src/dependency_edit.rs
expression: doc.to_string()
---
[project]
name = "test-project"
r_version = "4.4"

repositories = [
    { alias = "cran", url = "https://cran.r-project.org"},
    { alias = "ppm", url = "https://packagemanager.posit.co/cran/latest"},
]

dependencies = [
    { name = "mypkg", git = "https://github.com/user/repo", branch = "main", directory = "subdir" },
]
