src/snapshots/rv__dependency_edit__tests__add_local_path.snap
---
source: src/dependency_edit.rs
expression: doc.to_string()
---
[project]
name = "test-project"
r_version = "4.4"

repositories = [
    { alias = "cran", url = "https://cran.r-project.org"},
    { alias = "ppm", url = "https://packagemanager.posit.co/cran/latest"},
]

dependencies = [
    { name = "mypkg", path = "../local/package" },
]
